# logging

./: .gitmodules  CMakeLists.txt
apps/qt_logging_example/: CMakeLists.txt  main.cc
apps/qt_logging_example/example_configs/: config.xml
apps/qt_logging_example/resources/: example.qrc
apps/qt_logging_example/resources/qml/: Example.qml  LogView.qml
apps/simple_logging_example/: CMakeLists.txt  main.cc
libs/: CMakeLists.txt
libs/logging/: CMakeLists.txt  logger.cc  logger.h  sinks.h
libs/qt_logging/: CMakeLists.txt  sinks.cc  sinks.h  utils.cc  utils.h
unit_test/: CMakeLists.txt  helper.h  logger_test.cc  main.cc
